--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,27 @@
 # Core dependencies
-streamlit==1.39.0
-python-dotenv==1.0.1
+streamlit>=1.39.0
+python-dotenv>=1.0.1
 
 # Google AI
-google-generativeai==0.8.3
+google-generativeai>=0.8.3
 
 # LangChain ecosystem  
-langchain==0.3.10
-langchain-community==0.3.10
-langchain-core==0.3.26
-langchain-text-splitters==0.3.4
-langchain-huggingface==0.1.3
+langchain>=0.3.0
+langchain-community>=0.3.0
+langchain-core>=0.3.0
+langchain-text-splitters>=0.3.0
+langchain-huggingface>=0.3.0
 
 # Vector database - Pinecone only
-pinecone[asyncio]==6.0.0
-langchain-pinecone==0.2.11
+pinecone[asyncio]>=6.0.0
+langchain-pinecone>=0.2.0
 
 # Embeddings
-sentence-transformers==2.7.0
-torch==2.6.0
+sentence-transformers>=2.5.0
+torch>=2.0.0
 
 # Document processing
-PyPDF2==3.0.1
-requests==2.32.4
-beautifulsoup4==4.12.3
-lxml==5.3.0
-
-# File handling
-pathlib==1.0.1
+PyPDF2>=3.0.0
+requests>=2.30.0
+beautifulsoup4>=4.12.0
+lxml>=5.0.0
