--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ python-dotenv>=1.0.1
 
 # Google AI
 google-generativeai>=0.8.3
+langchain-google-genai>=2.0.0
 
 # LangChain ecosystem  
 langchain>=0.3.0
